# angreal

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  Readme.md  build.sh
.cmake/: clang-tidy.cmake  common.cmake  gtest.cmake
.github/workflows/: clang-format.yml  clang-tidy.yml
src/: CMakeLists.txt
src/angreal/: CMakeLists.txt  main.cpp
src/common/: ast_interfaces.h  common.h  error_handler.h  exceptions.h  state.h  symbols.h  token.h  visitor.h
src/error_handler/: CMakeLists.txt  error_reporter.cpp  error_reporter.h
src/include/: CMakeLists.txt  chunk.h  common.h  debug.h  stack.h  value.h  virtual_machine.h
src/interpreter/: CMakeLists.txt  Scope.cpp  Scope.h  context.h  executor.cpp  executor.h  interpreter.cpp  interpreter.h
src/interpreter/analysis/semantic/: CMakeLists.txt  resolver.cpp  resolver.h  semantic_analyzer.cpp  semantic_analyzer.h
src/interpreter/environment/: CMakeLists.txt  binary_op.cpp  binary_op.h  callable.cpp  callable.h  environment.cpp  environment.h  literal_types.cpp  literal_types.h  object.cpp  object.h  type.h  unary_op.cpp  unary_op.h
src/interpreter/virtual_machine/: CMakeLists.txt  literal_types.cpp  literal_types.h  object.cpp  object.h  type.h  vm.cpp  vm.h
src/lexer/: CMakeLists.txt  angreal_dfa.cpp  angreal_dfa.h  dfa.h  lexer.cpp  lexer.h  tb_dfa.cpp  tb_dfa.h
src/libangreal/: CMakeLists.txt  chunk.cpp  debug.cpp  value.cpp  virtual_machine.cpp
src/parser/: CMakeLists.txt  ast.cpp  ast.h  parser.cpp  parser.h  type_helper.cpp  type_helper.h  type_system.cpp  type_system.h
src/tree_walker/: CMakeLists.txt
src/tree_walker/common/: ast_interfaces.h  exceptions.h  state.h  symbols.h  token.h  visitor.h
src/tree_walker/interpreter/: context.h  executor.cpp  executor.h  interpreter.cpp
src/tree_walker/interpreter/analysis/: CMakeLists.txt
src/tree_walker/interpreter/analysis/semantic/: CMakeLists.txt  resolver.cpp  resolver.h
src/tree_walker/interpreter/environment/: CMakeLists.txt  binary_op.cpp  binary_op.h  callable.cpp  callable.h  literal_types.h  object.cpp
src/tree_walker/lexer/: CMakeLists.txt  angreal_dfa.cpp  dfa.h  lexer.cpp  lexer.h
src/tree_walker/parser/: CMakeLists.txt  ast.cpp  ast.h  parser.cpp  parser.h  type_helper.cpp
tests/: CMakeLists.txt  error_reporter_mocks.h
tests/acceptance/: AT_test.cpp  CMakeLists.txt  class_test.cpp  errors_test.cpp  example_test.cpp  function_test.cpp  scoping_test.cpp  test_fixtures.h  while_test.cpp
tests/interpreter/: CMakeLists.txt  assignment_test.cpp  binary_op_test.cpp  callable_test.cpp  class_test.cpp  declaration_test.cpp  identifier_test.cpp  interpreter_test.cpp  main.cpp  scope_test.cpp  test_fixtures.cpp  test_fixtures.h  unary_op_test.cpp
tests/interpreter/semantic_analyzer/: CMakeLists.txt  resolver_test.cpp  test_fixtures.h
tests/lexer/: CMakeLists.txt  dfa_test.cpp  lexer_test.cpp
tests/mocks/: CMakeLists.txt  mock_debug_tracer.h
tests/parser/: CMakeLists.txt  parser_test.cpp  test_fixtures.h
tests/tree_walker/: CMakeLists.txt
tests/tree_walker/acceptance/: test_fixtures.h  while_test.cpp
tests/tree_walker/interpreter/: assignment_test.cpp  scope_test.cpp
tests/tree_walker/lexer/: CMakeLists.txt  dfa_test.cpp  lexer_test.cpp
tests/tree_walker/parser/: CMakeLists.txt  parser_test.cpp  test_fixtures.h
tests/unit/: CMakeLists.txt  test_chunk.cpp  test_value.cpp  test_vm.cpp  test_with_param.h  ut_test_vm.cpp  ut_test_vm.h
